--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "devDependencies": {},
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "axios": "^0.19.2",
     "json-server": "^0.15.0",
+    "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
-    "react-star-rating-component": "^1.4.1"
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.0.1",
+    "react-star-rating-component": "^1.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "api": "json-server db.json --port=3001 --watch",
