--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
+    "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.0",
     "react-scripts": "3.0.1",
     "react-star-rating-component": "^1.4.1",
@@ -19,7 +20,7 @@
     "api": "json-server db.json --port=3001 --watch",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
