--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "devDependencies": {},
   "dependencies": {
+    "@material-ui/core": "^4.9.12",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.51",
     "axios": "^0.19.2",
     "json-server": "^0.15.0",
     "react": "^16.8.6",
